@@ -1,4 +1,5 @@
 HEAD
+	+ Avoid statement not recognized errors parsing ddns keys in leases file
 	+ Set version to 4.1
 4.0.1
 	+ TFTP service is now properly managed
